--- a/users/templates/users/user_base.html
+++ b/users/templates/users/user_base.html
@@ -74,7 +74,7 @@
   </script>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="{% static 'dashboard/images/favicon.ico' %}">
+  <link rel="shortcut icon" href="{% static 'frontend/img/logo.ico' %}">
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
